--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
             "type": "vcs",
             "url": "https://github.com/loduis/php-support.git"
         }
-    ]
+    ],
+    "extra": {
+        "branch-alias": {
+            "dev-main": "1.x-dev"
+        }
+    }
 }
